# recursive-regex

./: Cargo.toml  README.md
src/: just_string.rs  lib.rs  multi_capture.rs  owning_regex_iters.rs  regex_tree.rs  single_capture.rs  spanned.rs  string.rs  uncaptured.rs
tests/: favorite_numbers.rs  just_str.rs  spanned.rs
