[package]
name = "recursive_regex"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.6"
serde = "1.0"
serde_regex = { version = "1.1", optional = true }
itertools = "0.10"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }

[features]
deserialize-regex-tree = ["serde/derive", "serde_regex"]
